--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "lib/"
   ],
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/chai": "^4.1.7",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.0.10",
+    "@types/node": "^12.0.12",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
     "chai": "^4.2.0",
@@ -37,5 +39,9 @@
     "resolve": "^1.11.1",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2"
+  },
+  "dependencies": {
+    "axios": "^0.19.0",
+    "jsonwebtoken": "^8.5.1"
   }
 }
