--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "node-epicsgg",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "scripts": {
     "test": "mocha --opts tests/mocha.opts tests/**/*-test.{ts,tsx} && yarn run lint && yarn run build",
     "lint": "eslint 'src/**/*.{ts,tsx}' 'tests/**/*.{ts,tsx}'",
     "format": "prettier --write 'src/**/*.{ts,tsx}' 'tests/**/*.{ts,tsx}'",
     "build": "tsc -p tsconfig.json",
     "build:watch": "tsc -w -p tsconfig.json",
-    "prepublish": "yarn run build"
+    "prepare": "yarn run build"
   },
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
