--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "format": "prettier --write 'src/**/*.{ts,tsx}' 'tests/**/*.{ts,tsx}'",
     "build": "tsc -p tsconfig.json",
     "build:watch": "tsc -w -p tsconfig.json",
+    "build:docs": "typedoc --out ./docs --tsconfig tsconfig.json --mode file --excludeExternals --includeDeclarations --excludePrivate --excludeNotExported --theme minimal",
     "prepare": "yarn run build"
   },
   "main": "lib/index.js",
@@ -55,6 +56,7 @@
     "prettier": "^1.18.2",
     "resolve": "^1.11.1",
     "ts-node": "^8.3.0",
+    "typedoc": "^0.15.0",
     "typescript": "^3.5.2"
   },
   "dependencies": {
