--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,10 @@
   "include": [
     "src/**/*",
     "__tests__/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "tests",
+    "examples"
   ]
 }
