--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.0.12",
+    "@types/socket.io": "^2.1.2",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.11.0",
     "chai": "^4.2.0",
@@ -64,6 +65,8 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "socket.io-client": "^2.2.0",
+    "socketio-wildcard": "^2.0.0"
   }
 }
