--- a/package.json
+++ b/package.json
@@ -67,7 +67,6 @@
     "axios": "^0.19.0",
     "https-proxy-agent": "^2.2.2",
     "jsonwebtoken": "^8.5.1",
-    "socket.io-client": "^2.2.0",
-    "socketio-wildcard": "^2.0.0"
+    "socket.io-client": "^2.2.0"
   }
 }
