ci: update Renovate config file

--- a/renovate.json
+++ b/renovate.json
@@ -2,8 +2,9 @@
     "pinVersions": false,
     "supportPolicy": ["active"],
     "semanticCommits": true,
-    "semanticPrefix": "build",
-    "separateMajorMinor": false,
+    "semanticCommitType": "build",
+    "semanticCommitScope": "deps",
+    "separateMajorMinor": true,
     "prHourlyLimit": 2,
     "labels": ["PR target: master-only", "PR action: merge"],
     "timezone": "Europe/Paris",
