--- a/renovate.json
+++ b/renovate.json
@@ -14,6 +14,12 @@
     "schedule": ["after 4am every day", "before 6am every day"],
     "baseBranches": ["master"],
     "packageFiles": ["package.json"],
+    "packageRules": [
+        {
+            "packagePatterns": ["*"],
+            "semanticCommitType": "build"
+        }
+    ],
     "major": {
         "devDependencies": {
             "enabled": true
