--- a/.releaserc.json
+++ b/.releaserc.json
@@ -3,24 +3,33 @@
     "branch": "master",
     "tagFormat": "v${version}",
     "plugins": [
-        ["@semantic-release/commit-analyzer", {
-            "preset": "insurgent"
-        }],
-        ["@semantic-release/release-notes-generator", {
-            "preset": "insurgent"
-        }],
-        ["@semantic-release/changelog", {
-            "changelogFile": "CHANGELOG.md"
-        }],
+        [
+            "@semantic-release/commit-analyzer",
+            {
+                "preset": "insurgent"
+            }
+        ],
+        [
+            "@semantic-release/release-notes-generator",
+            {
+                "preset": "insurgent"
+            }
+        ],
+        [
+            "@semantic-release/changelog",
+            {
+                "changelogFile": "CHANGELOG.md"
+            }
+        ],
         "@semantic-release/npm",
-        ["@semantic-release/git", {
-            "assets": [
-                "CHANGELOG.md",
-                "package.json",
-                "docs/**"
-            ],
-            "message": "Release v${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
-        }],
+        ["@semantic-release/exec", { "prepareCmd": "npm run build:docs" }],
+        [
+            "@semantic-release/git",
+            {
+                "assets": ["CHANGELOG.md", "package.json", "docs/**"],
+                "message": "Release v${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+            }
+        ],
         "@semantic-release/github"
     ]
 }
