--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
     "name": "node-epicsgg",
     "version": "2.0.0",
     "description": "An interface to communicate with Epics.gg API",
-    "keywords": [
-        "epics.gg",
-        "epics"
-    ],
+    "keywords": ["epics.gg", "epics"],
     "author": {
-        "url": "clmntw.fr",
+        "url": "https://clmntw.fr",
         "email": "github@clmntw.fr",
         "name": "Roguyt"
     },
@@ -36,9 +33,7 @@
     "main": "lib/index.js",
     "typings": "lib/index.d.ts",
     "license": "MIT",
-    "files": [
-        "lib/"
-    ],
+    "files": ["lib/"],
     "husky": {
         "hooks": {
             "pre-commit": "pretty-quick --staged --pattern '**/*'"
@@ -47,6 +42,7 @@
     "devDependencies": {
         "@semantic-release/changelog": "^5.0.1",
         "@semantic-release/commit-analyzer": "^8.0.1",
+        "@semantic-release/exec": "^5.0.0",
         "@semantic-release/git": "^9.0.0",
         "@semantic-release/github": "^7.0.5",
         "@semantic-release/npm": "^7.0.5",
