update author's email + add contributor (me lol)

--- a/.prettierrc
+++ b/.prettierrc
@@ -21,6 +21,12 @@
         "parser": "yaml",
         "tabWidth": 2
       }
+    },
+    {
+      "files": ["*.md"],
+      "options": {
+        "parser": "markdown"
+      }
     }
   ]
 }
