--- a/.prettierrc
+++ b/.prettierrc
@@ -9,8 +9,24 @@
   "useTabs": false,
   "overrides": [
     {
-      "files": [".*", "*.json"],
-      "options": { "parser": "json" }
+      "files": ["*.json"],
+      "options": {
+        "parser": "json",
+        "tabWidth": 4
+      }
+    },
+    {
+      "files": ["*.yml"],
+      "options": {
+        "parser": "yaml",
+        "tabWidth": 2
+      }
+    },
+    {
+      "files": ["*.md"],
+      "options": {
+        "parser": "markdown"
+      }
     }
   ]
 }
