--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -48,5 +48,5 @@ jobs:
       - name: Run Semantic Release
         run: yarn run release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
