build: enable strictNullChecks for a better type check

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
         "forceConsistentCasingInFileNames": true,
         "noUnusedLocals": true,
         "pretty": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "strictNullChecks": true
     },
     "include": ["src/**/*", "__tests__/**/*"],
     "exclude": ["node_modules", "tests", "examples"]
