--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "@semantic-release/npm": "^7.0.5",
         "@semantic-release/release-notes-generator": "^9.0.1",
         "@types/chai": "^4.1.7",
+        "@types/debug": "^4.1.5",
         "@types/jsonwebtoken": "^8.3.9",
         "@types/mocha": "^8.0.0",
         "@types/node": "^12.0.12",
@@ -89,6 +90,7 @@
     },
     "dependencies": {
         "axios": "^0.21.0",
+        "debug": "^4.1.1",
         "https-proxy-agent": "^5.0.0",
         "jsonwebtoken": "^8.5.1",
         "socket.io-client": "^2.2.0"
