--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
     "name": "node-epicsgg",
     "version": "2.3.5",
     "description": "An interface to communicate with Epics.gg API",
-    "keywords": [
-        "epics.gg",
-        "epics"
-    ],
+    "keywords": ["epics.gg", "epics"],
     "author": {
         "url": "https://clmntw.fr",
         "email": "git@clmntw.fr",
@@ -31,7 +28,7 @@
         "node": ">=8.0.0"
     },
     "scripts": {
-        "test": "mocha --opts tests/mocha.opts tests/**/*-test.{ts,tsx}",
+        "test": "mocha --config tests/.mocharc.js tests/**/*-test.{ts,tsx}",
         "lint": "eslint 'src/**/*.{ts,tsx}' 'tests/**/*.{ts,tsx}'",
         "format": "prettier --write 'src/**/*.{ts,tsx}' 'tests/**/*.{ts,tsx}'",
         "build": "tsc -p tsconfig.json",
@@ -43,9 +40,7 @@
     "main": "lib/index.js",
     "typings": "lib/index.d.ts",
     "license": "MIT",
-    "files": [
-        "lib/"
-    ],
+    "files": ["lib/"],
     "husky": {
         "hooks": {
             "pre-commit": "pretty-quick --staged --pattern '**/*'"
@@ -61,23 +56,23 @@
         "@semantic-release/release-notes-generator": "^9.0.1",
         "@types/chai": "^4.1.7",
         "@types/jsonwebtoken": "^8.3.9",
-        "@types/mocha": "^7.0.0",
+        "@types/mocha": "^8.0.0",
         "@types/node": "^12.0.12",
         "@types/socket.io": "^2.1.2",
-        "@typescript-eslint/eslint-plugin": "^2.30.0",
-        "@typescript-eslint/parser": "^2.30.0",
+        "@typescript-eslint/eslint-plugin": "^4.0.0",
+        "@typescript-eslint/parser": "^4.0.0",
         "chai": "^4.2.0",
         "conventional-changelog-insurgent": "^6.1.1",
-        "eslint": "^6.0.0",
-        "eslint-config-airbnb-base": "^14.0.0",
+        "eslint": "^7.2.0",
+        "eslint-config-airbnb-base": "^14.2.0",
         "eslint-config-prettier": "^6.0.0",
         "eslint-config-typescript": "^3.0.0",
         "eslint-formatter-pretty": "^4.0.0",
         "eslint-import-resolver-typescript": "^2.0.0",
-        "eslint-plugin-import": "^2.18.0",
+        "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-prettier": "^3.1.0",
         "husky": "^4.2.5",
-        "mocha": "^7.0.0",
+        "mocha": "^8.0.0",
         "mocha-clean": "^1.0.0",
         "prettier": "^2.0.5",
         "pretty-quick": "^3.0.0",
@@ -85,10 +80,10 @@
         "semantic-release": "^17.0.7",
         "ts-node": "^9.0.0",
         "typedoc": "^0.19.0",
-        "typescript": "^3.5.2"
+        "typescript": "^4.0.0"
     },
     "dependencies": {
-        "axios": "^0.20.0",
+        "axios": "^0.21.0",
         "https-proxy-agent": "^5.0.0",
         "jsonwebtoken": "^8.5.1",
         "socket.io-client": "^2.2.0"
