--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,35 @@
-node_modules
-lib
-npm-debug.log
+# compiled output
+/examples
+/lib
+/node_modules
 
-# IDE
-.idea/
-.vscode/
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
 
-# Examples
-examples/
+# OS
+.DS_Store
+
+# Tests
+/coverage
+/.nyc_output
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
