--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
         "email": "git@clmntw.fr"
     },
     "engines": {
-        "node": ">=8.0.0"
+        "node": ">=12.0.0"
     },
     "scripts": {
-        "test": "mocha --config tests/.mocharc.js tests/**/*-test.{ts,tsx}",
-        "lint": "eslint 'src/**/*.{ts,tsx}' 'tests/**/*.{ts,tsx}'",
-        "format": "prettier --write 'src/**/*.{ts,tsx}' 'tests/**/*.{ts,tsx}'",
+        "test": "jest --passWithNoTests",
+        "test:watch": "jest --watch",
+        "test:cov": "jest --coverage",
+        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+        "lint": "eslint '{src,test}/**/*.{ts,tsx}' --fix",
+        "format": "prettier --write 'src/**/*.{ts,tsx}' 'test/**/*.{ts,tsx}'",
         "build": "tsc -p tsconfig.json",
         "build:watch": "tsc -w -p tsconfig.json",
         "build:docs": "typedoc --out ./docs --tsconfig tsconfig.json --mode file --excludeExternals --includeDeclarations --excludePrivate --excludeNotExported --theme minimal",
@@ -48,8 +51,25 @@
     ],
     "husky": {
         "hooks": {
-            "pre-commit": "pretty-quick --staged --pattern '**/*'"
+            "pre-commit": "eslint \"{src,test}/**/*.ts\" --fix && pretty-quick --staged"
         }
+    },
+    "jest": {
+        "moduleFileExtensions": [
+            "js",
+            "json",
+            "ts"
+        ],
+        "rootDir": ".",
+        "testRegex": ".spec.ts$",
+        "transform": {
+            "^.+\\.(t|j)s$": "ts-jest"
+        },
+        "coverageDirectory": "./coverage",
+        "testEnvironment": "node",
+        "roots": [
+            "<rootDir>/src/"
+        ]
     },
     "devDependencies": {
         "@semantic-release/changelog": "^5.0.1",
@@ -59,34 +79,30 @@
         "@semantic-release/github": "^7.0.5",
         "@semantic-release/npm": "^7.0.5",
         "@semantic-release/release-notes-generator": "^9.0.1",
-        "@types/chai": "^4.1.7",
         "@types/debug": "^4.1.5",
         "@types/jsonwebtoken": "^8.3.9",
-        "@types/mocha": "^8.0.0",
         "@types/node": "^12.0.12",
         "@types/socket.io": "^2.1.2",
-        "@typescript-eslint/eslint-plugin": "^4.0.0",
-        "@typescript-eslint/parser": "^4.0.0",
-        "chai": "^4.2.0",
+        "@typescript-eslint/eslint-plugin": "3.0.2",
+        "@typescript-eslint/parser": "3.0.2",
+        "eslint": "7.1.0",
+        "eslint-config-prettier": "^6.10.0",
+        "eslint-plugin-import": "^2.20.1",
+        "eslint-plugin-simple-import-sort": "^7.0.0",
         "conventional-changelog-insurgent": "^6.1.1",
-        "eslint": "^7.2.0",
-        "eslint-config-airbnb-base": "^14.2.0",
-        "eslint-config-prettier": "^6.0.0",
-        "eslint-config-typescript": "^3.0.0",
-        "eslint-formatter-pretty": "^4.0.0",
-        "eslint-import-resolver-typescript": "^2.0.0",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-prettier": "^3.1.0",
         "husky": "^4.2.5",
-        "mocha": "^8.0.0",
-        "mocha-clean": "^1.0.0",
         "prettier": "^2.0.5",
         "pretty-quick": "^3.0.0",
         "resolve": "^1.11.1",
         "semantic-release": "^17.0.7",
-        "ts-node": "^9.0.0",
+        "ts-jest": "26.1.0",
+        "ts-loader": "^6.2.1",
+        "ts-node": "^8.6.2",
+        "tsconfig-paths": "^3.9.0",
         "typedoc": "^0.19.0",
-        "typescript": "^4.0.0"
+        "typescript": "^3.9.9",
+        "@types/jest": "25.2.3",
+        "jest": "26.0.1"
     },
     "dependencies": {
         "axios": "^0.21.0",
