--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
         "strictNullChecks": true
     },
     "include": ["src/**/*", "__tests__/**/*"],
-    "exclude": ["node_modules", "tests", "examples"]
+    "exclude": ["node_modules", "test", "examples"]
 }
