--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "build": "tsc -p tsconfig.build.json",
         "build:watch": "tsc -w -p tsconfig.build.json",
         "build:docs": "typedoc --out ./docs --tsconfig tsconfig.build.json --mode file --excludeExternals --includeDeclarations --excludePrivate --excludeNotExported --theme minimal",
+        "prebuild": "rimraf lib",
         "prepack": "yarn run build",
         "release": "semantic-release"
     },
@@ -80,35 +81,35 @@
         "@semantic-release/npm": "^7.0.5",
         "@semantic-release/release-notes-generator": "^9.0.1",
         "@types/debug": "^4.1.5",
+        "@types/jest": "25.2.3",
         "@types/jsonwebtoken": "^8.3.9",
         "@types/node": "^12.0.12",
-        "@types/socket.io": "^2.1.2",
         "@typescript-eslint/eslint-plugin": "3.0.2",
         "@typescript-eslint/parser": "3.0.2",
+        "conventional-changelog-insurgent": "^6.1.1",
         "eslint": "7.1.0",
         "eslint-config-prettier": "^6.10.0",
         "eslint-plugin-import": "^2.20.1",
         "eslint-plugin-simple-import-sort": "^7.0.0",
-        "conventional-changelog-insurgent": "^6.1.1",
         "husky": "^4.2.5",
+        "jest": "26.0.1",
         "prettier": "^2.0.5",
         "pretty-quick": "^3.0.0",
         "resolve": "^1.11.1",
+        "rimraf": "^3.0.2",
         "semantic-release": "^17.0.7",
         "ts-jest": "26.1.0",
         "ts-loader": "^6.2.1",
         "ts-node": "^8.6.2",
         "tsconfig-paths": "^3.9.0",
         "typedoc": "^0.19.0",
-        "typescript": "^3.9.9",
-        "@types/jest": "25.2.3",
-        "jest": "26.0.1"
+        "typescript": "^3.9.9"
     },
     "dependencies": {
         "axios": "^0.21.0",
         "debug": "^4.1.1",
         "https-proxy-agent": "^5.0.0",
         "jsonwebtoken": "^8.5.1",
-        "socket.io-client": "^2.2.0"
+        "socket.io-client": "^2"
     }
 }
